persistentn menu quick fix

--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -63,7 +63,7 @@
 											html += '<li><a target="_blank" href="' + msg[0].persistentMenu[i].text +'">' + msg[0].persistentMenu[i].name + '</a></li>';
 											html += '<li role="separator" class="divider"></li>';
 										}else{
-											html += '<li><a href="javascript:sendMessagePersistentMenu(\'' + msg[0].persistentMenu[i].text + '\')">' + msg[0].persistentMenu[i].text + '</a></li>';
+											html += '<li><a href="javascript:sendMessagePersistentMenu(\'' + msg[0].persistentMenu[i].text + '\')">' + msg[0].persistentMenu[i].name + '</a></li>';
 											html += '<li role="separator" class="divider"></li>';
 										}
 									}
