--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -310,12 +310,12 @@
 
 				</ul>
 			</div>
-			<div class="input" style="">
+			<div class="input" style="z-index:99999">
 					<span class="myicon persistentMenu glyphicon glyphicon-menu-hamburger">
 
 					</span>
 					<p class="lead emoji-picker-container">
-						<input type="text" class="form-control" name="input" style="border:none" data-emojiable="true">
+						<input style="border:none" type="text" class="form-control" name="input"  data-emojiable="true">
 					</p>
 			 </div>
 		</div>
