--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -126,7 +126,7 @@
 							var li = "";
 						for(var i = 0; i < obj.text.length; i++){
 						 li += '<li>'
-								+'<img width="300px" max-height="150px" class="img-responsive img_border" src="' + obj.text[i].imgUrl + '"/>'
+								+'<img height="200px !important" class="img_border" src="' + obj.text[i].imgUrl + '"/>'
 									+'<div class="slider-title">' + obj.text[i].title + '</div>'
 								+'<div class="slider-subtitle">' + obj.text[i].subtitle + '</div>';
 								var buttons = "";
