--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -13,8 +13,8 @@
 			var beginIndex = index + 12;
 			
 			var endIndex = window.location.href.indexOf("&");
-			var accessToken = window.location.href.substring(beginIndex, endIndex);
-			var authorization = window.location.href.substring(endIndex + 15,window.location.href.length);
+			window['accessToken'] = window.location.href.substring(beginIndex, endIndex);
+			window['authorization'] = window.location.href.substring(endIndex + 15,window.location.href.length);
 		</script>
 
 		<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
