--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -28,10 +28,10 @@
 						el = document.getElementsByClassName("emoji-wysiwyg-editor");
 						if(el[0] && el[0].innerHTML) {
 							el = el[0].innerHTML;
-						}
+						}else
 						if(el[0] && el[0].textContent) {
 							el = el[0].textContent;
-						}
+						}else 
 						if(el[0] && el[0].innerText) {
 							el = el[0].innerText;
 						}
